[TASK]Menu Slide, add more elements

--- a/Ressources/Private/index.html
+++ b/Ressources/Private/index.html
@@ -12,6 +12,7 @@
 <body>
 
     <img class="background-right" src="../img/bg_objekt_oben_rechts.svg" alt="background">
+    <img class="background-left" src="../img/bg_objekt_links.svg" alt="background">
     <img class="background-left-bottom" src="../img/bg_objekt_unten_links.svg" alt="background">
 
     <div class="nav-container">
@@ -113,8 +114,53 @@
                     perspiciatis nihil sint, magnam sapiente excepturi non!</p>
             </div>
 
-            <h1>Studien</h1>
+            <div class="news-container">
+                <h1>News</h1>
+                <div class="news-slider">
+                    <div class="news-slide">
+                        <img src="../img/teaser/2.png" alt="second-teaser">
+                        <div class="news-content">
+                            <p class="news-date">18.03.2021</p>
+                            <h2 class="news-title">Überschrift</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
+                                enim,
+                                ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
+                            </p>
+                            <a href="secondsub.html">Mehr</a>
+                        </div>
+                    </div>
 
+                    <div class="news-slide">
+                        <img src="../img/teaser/4.png" alt="second-teaser">
+                        <div class="news-content">
+                            <p class="news-date">16.01.2020</p>
+                            <h2 class="news-title">Überschrift</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
+                                enim,
+                                ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
+                            </p>
+                            <a href="secondsub.html">Mehr</a>
+                        </div>
+                    </div>
+
+                    <div class="news-slide">
+                        <img src="../img/teaser/1.png" alt="second-teaser">
+                        <div class="news-content">
+                            <p class="news-date">04.03.2021</p>
+                            <h2 class="news-title">Überschrift</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
+                                enim,
+                                ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
+                            </p>
+                            <a href="secondsub.html">Mehr</a>
+                        </div>
+                    </div>
+                </div>
+                <a href=""></a>
+            </div>
+
+            
+            <h1>Studien</h1>
             <div class="teaser-container">
                 <div class="teaser">
                     <img src="../img/teaser/7.png" alt="first-teaser">
@@ -146,9 +192,7 @@
             </div>
             <div class="content-element-1">
                 <h2 class="image-title">Bildüberschrift</h2>
-                <div class="image-container">
-                    <img src="../img/teaser/6.jpg" alt="cover">
-                </div>
+                <img src="../img/teaser/6.jpg" alt="cover">
                 <h2>Überschrift</h2>
                 <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem repellendus iure cupiditate?</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas laudantium iusto, deleniti velit
@@ -156,6 +200,7 @@
                     in aut? Reprehenderit minima labore ratione hic eos dolorum iste animi saepe sed natus deserunt
                     dignissimos at accusamus error fugiat, nihil ex. Iste pariatur, dolorum et beatae, facilis numquam
                     fugit veritatis hic cumque, quisquam quo ullam earum.</p>
+                <a href="secondsub.html">Mehr</a>
             </div>
 
 
