--- a/Ressources/Public/index.html
+++ b/Ressources/Public/index.html
@@ -1,1 +1,216 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="main.b4556af1.css"><title>Document</title></head><body> <img class="background-right" src="bg_objekt_oben_rechts.cd44cb41.svg" alt="background"> <img class="background-left-bottom" src="bg_objekt_unten_links.4a6ed5ad.svg" alt="background"> <div class="nav-container"> <nav class="navbar"> <div class="logo"> <a href="index.html"><img src="zmg_logo.e4b07c7a.svg" alt="Logo"></a> </div> <ul class="nav-items"> <li> <p>Anmelden</p><svg xmlns="http://www.w3.org/2000/svg" width="32" height="33" viewBox="0 0 32 33"> <g id="Person" transform="translate(-1256 -3484.5)"> <rect id="Rechteck_111" data-name="Rechteck 111" width="32" height="32" transform="translate(1256 3485)" fill="#fff" opacity="0"></rect> <path id="Schnittmenge_4" data-name="Schnittmenge 4" d="M-9900.238-10c-.275-4.4-.527-8.81-.781-13.215-.158-2.725,1.029-3.982,3.781-3.993,2.711-.012,5.42,0,8.129,0,.9,0,1.807,0,2.709,0,1.887,0,3.773-.006,5.66.01,2.4.019,3.48,1.03,3.406,3.438-.105,3.574-.34,7.146-.561,10.715q-.1,1.526-.205,3.05Zm11.182-19.681a6.2,6.2,0,0,1-6.172-6.226A5.963,5.963,0,0,1-9889.2-42a5.978,5.978,0,0,1,6.146,6.108,6.146,6.146,0,0,1-5.965,6.21Z" transform="translate(11161.182 3526.999)" stroke="rgba(0,0,0,0)" stroke-miterlimit="10" stroke-width="1"></path> </g> </svg> </li> <li><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"> <g id="Lupe" transform="translate(-1295 -3485)"> <rect id="Rechteck_112" data-name="Rechteck 112" width="32" height="32" transform="translate(1295 3485)" fill="#fff" opacity="0"></rect> <path id="Icon_material-search" data-name="Icon material-search" d="M27.37,24.626H25.925l-.512-.494a11.91,11.91,0,1,0-1.281,1.281l.494.512V27.37l9.148,9.13L36.5,33.774Zm-10.978,0a8.233,8.233,0,1,1,8.233-8.233A8.222,8.222,0,0,1,16.393,24.626Z" transform="translate(1290.5 3480.5)"></path> </g> </svg> </li> <li> <button class="menuButton show-menu" onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))" aria-label="Main Menu"> <svg width="40" height="40" viewBox="0 0 100 100"> <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058"></path> <path class="line line2" d="M 20,50 H 80"></path> <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942"></path> </svg> </button> </li> </ul> </nav> </div> <div class="hidden menu"> <ul class="nav-level-1"> <li><a href="sub.html">News</a></li> <li><a href="sub.html">Studien</a></li> <li> <p class="has-subPage services">Services</p> </li> <li> <p class="has-subPage tools">Tools & Instrumente</p> </li> <li><a href="sub.html">Seminare & Workshops</a></li> <li><a href="sub.html">ZMG-Archiv</a></li> <li><a href="sub.html">Unser Team</a></li> </ul> <ul class="hidden level-2-services nav-level-2"> <li><a href="sub.html">Reichweiten der Zeitungen</a></li> <li><a href="sub.html">Auflagen der Zeitungen</a></li> <li><a href="sub.html">Media- und Planungsdaten</a></li> <li><a href="sub.html">Media-Beratung</a></li> <li><a href="sub.html">Daten & Services für Verlage</a></li> <li><a href="sub.html">Das Engagement der ZMG</a></li> </ul> <ul class="hidden level-2-tools nav-level-2"> <li><a href="sub.html">Werbewirkungstools</a></li> <li><a href="sub.html">Planungstools</a></li> <li><a href="sub.html">Buchungstools</a></li> </ul> <div class="hidden menu-teaser"> <div class="menu-teaser-image"> </div> <h3>Dies ist ein Teaser</h3> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, cum. Nobis dolorem voluptate eaque quod? Obcaecati tenetur ipsam mollitia minus.</p> </div> </div> <div class="header-image-container"> <img src="6.e96203d2.jpg" alt="" class="header-image"> </div> <div class="content-wrapper"> <main> <div class="header-text"> <h2>Wir zeigen die Kraft der Zeitungen</h2> <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti commodi amet enim molestiae sed labore sit, esse suscipit, obcaecati quidem molestias facilis repudiandae sequi doloremque praesentium qui ea nemo. Illo tenetur reprehenderit sunt id consectetur ex nostrum soluta repudiandae laudantium libero officiis nam, aspernatur maiores minima sequi! Quos quia at, optio, ab quisquam mollitia similique placeat aliquam enim quae aliquid asperiores expedita labore perspiciatis nihil sint, magnam sapiente excepturi non!</p> </div> <h1>Studien</h1> <div class="teaser-container"> <div class="teaser"> <img src="7.689901f4.png" alt="first-teaser"> <div class="teaser-content"> <h2 class="teaser-title">Auflagen der Zeitungen</h2> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias, enim, ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.</p> <a href="secondsub.html">Mehr</a> </div> </div> <div class="teaser"> <img src="8.07ef6bdf.png" alt="second-teaser"> <div class="teaser-content"> <h2 class="teaser-title">Media-Beratung</h2> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias, enim, ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.</p> <a href="secondsub.html">Mehr</a> </div> </div> <div class="teaser"> <img src="9.4a612179.png" alt="third-teaser"> <div class="teaser-content"> <h2 class="teaser-title">Gremien</h2> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias, enim, ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.</p> <a href="secondsub.html">Mehr</a> </div> </div> </div> <div class="content-element-1"> <h2 class="image-title">Bildüberschrift</h2> <div class="image-container"> <img src="6.e96203d2.jpg" alt="cover"> </div> <h2>Überschrift</h2> <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem repellendus iure cupiditate?</h3> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas laudantium iusto, deleniti velit veritatis ea beatae inventore ab recusandae ullam ut error repellat officia ad. Ipsum fugiat quasi in aut? Reprehenderit minima labore ratione hic eos dolorum iste animi saepe sed natus deserunt dignissimos at accusamus error fugiat, nihil ex. Iste pariatur, dolorum et beatae, facilis numquam fugit veritatis hic cumque, quisquam quo ullam earum.</p> </div> </main> </div>  <div class="footer-container"> <div class="footer"> <ul> <li><a href="secondsub.html">Impressum</a></li> <li><a href="secondsub.html">Datenschutz</a></li> <li><a href="secondsub.html">Jobs</a></li> <li><a href="secondsub.html">Anmelden</a></li> </ul> </div> </div> <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> <script src="main.6518d4b3.js"></script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/main.4a07f87c.css">
+    <title>Document</title>
+<script src="/main.4a07f87c.js"></script></head>
+
+<body>
+
+    <img class="background-right" src="/bg_objekt_oben_rechts.e5134fee.svg" alt="background">
+    <img class="background-left" src="/bg_objekt_links.379aee69.svg" alt="background">
+    <img class="background-left-bottom" src="/bg_objekt_unten_links.0dbdb7d6.svg" alt="background">
+
+    <div class="nav-container">
+        <nav class="navbar">
+            <div class="logo">
+                <a href="/index.html"><img src="/zmg_logo.817211ac.svg" alt="Logo"></a>
+            </div>
+            <ul class="nav-items">
+                <li>
+                    <p>Anmelden</p><svg xmlns="http://www.w3.org/2000/svg" width="32" height="33" viewBox="0 0 32 33">
+                        <g id="Person" transform="translate(-1256 -3484.5)">
+                            <rect id="Rechteck_111" data-name="Rechteck 111" width="32" height="32" transform="translate(1256 3485)" fill="#fff" opacity="0"></rect>
+                            <path id="Schnittmenge_4" data-name="Schnittmenge 4" d="M-9900.238-10c-.275-4.4-.527-8.81-.781-13.215-.158-2.725,1.029-3.982,3.781-3.993,2.711-.012,5.42,0,8.129,0,.9,0,1.807,0,2.709,0,1.887,0,3.773-.006,5.66.01,2.4.019,3.48,1.03,3.406,3.438-.105,3.574-.34,7.146-.561,10.715q-.1,1.526-.205,3.05Zm11.182-19.681a6.2,6.2,0,0,1-6.172-6.226A5.963,5.963,0,0,1-9889.2-42a5.978,5.978,0,0,1,6.146,6.108,6.146,6.146,0,0,1-5.965,6.21Z" transform="translate(11161.182 3526.999)" stroke="rgba(0,0,0,0)" stroke-miterlimit="10" stroke-width="1"></path>
+                        </g>
+                    </svg>
+                </li>
+                <li><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                        <g id="Lupe" transform="translate(-1295 -3485)">
+                            <rect id="Rechteck_112" data-name="Rechteck 112" width="32" height="32" transform="translate(1295 3485)" fill="#fff" opacity="0"></rect>
+                            <path id="Icon_material-search" data-name="Icon material-search" d="M27.37,24.626H25.925l-.512-.494a11.91,11.91,0,1,0-1.281,1.281l.494.512V27.37l9.148,9.13L36.5,33.774Zm-10.978,0a8.233,8.233,0,1,1,8.233-8.233A8.222,8.222,0,0,1,16.393,24.626Z" transform="translate(1290.5 3480.5)"></path>
+                        </g>
+                    </svg>
+                </li>
+                <li> <button class="menuButton show-menu" onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))" aria-label="Main Menu">
+                        <svg width="40" height="40" viewBox="0 0 100 100">
+                            <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058"></path>
+                            <path class="line line2" d="M 20,50 H 80"></path>
+                            <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942"></path>
+                        </svg>
+                    </button>
+                </li>
+            </ul>
+        </nav>
+    </div>
+
+    <div class="menu hidden">
+        <ul class="nav-level-1">
+            <li><a href="/sub.html">News</a></li>
+            <li><a href="/sub.html">Studien</a></li>
+            <li>
+                <p class="has-subPage services">Services</p>
+            </li>
+            <li>
+                <p class="has-subPage tools">Tools & Instrumente</p>
+            </li>
+            <li><a href="/sub.html">Seminare & Workshops</a></li>
+            <li><a href="/sub.html">ZMG-Archiv</a></li>
+            <li><a href="/sub.html">Unser Team</a></li>
+        </ul>
+        <ul class="nav-level-2 level-2-services hidden">
+            <li><a href="/sub.html">Reichweiten der Zeitungen</a></li>
+            <li><a href="/sub.html">Auflagen der Zeitungen</a></li>
+            <li><a href="/sub.html">Media- und Planungsdaten</a></li>
+            <li><a href="/sub.html">Media-Beratung</a></li>
+            <li><a href="/sub.html">Daten & Services für Verlage</a></li>
+            <li><a href="/sub.html">Das Engagement der ZMG</a></li>
+        </ul>
+
+        <ul class="nav-level-2 level-2-tools hidden ">
+            <li><a href="/sub.html">Werbewirkungstools</a></li>
+            <li><a href="/sub.html">Planungstools</a></li>
+            <li><a href="/sub.html">Buchungstools</a></li>
+        </ul>
+        <div class="menu-teaser hidden">
+            <div class="menu-teaser-image">
+            </div>
+            <h3>Dies ist ein Teaser</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, cum. Nobis dolorem voluptate eaque quod?
+                Obcaecati tenetur ipsam mollitia minus.</p>
+        </div>
+    </div>
+
+
+    <div class="header-image-container">
+        <img src="/6.a7ef9a91.jpg" alt="" class="header-image">
+    </div>
+    <div class="content-wrapper">
+        <main>
+
+
+            <div class="header-text">
+                <h2>Wir zeigen die Kraft der Zeitungen</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti commodi amet enim molestiae sed
+                    labore sit, esse suscipit, obcaecati quidem molestias facilis repudiandae sequi doloremque
+                    praesentium qui ea nemo. Illo tenetur reprehenderit sunt id consectetur ex nostrum soluta
+                    repudiandae laudantium libero officiis nam, aspernatur maiores minima sequi! Quos quia at, optio, ab
+                    quisquam mollitia similique placeat aliquam enim quae aliquid asperiores expedita labore
+                    perspiciatis nihil sint, magnam sapiente excepturi non!</p>
+            </div>
+
+            <div class="news-container">
+                <h1>News</h1>
+                <div class="news-slider">
+                    <div class="news-slide">
+                        <img src="/2.afe90847.png" alt="second-teaser">
+                        <div class="news-content">
+                            <p class="news-date">18.03.2021</p>
+                            <h2 class="news-title">Überschrift</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
+                                enim,
+                                ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
+                            </p>
+                            <a href="/secondsub.html">Mehr</a>
+                        </div>
+                    </div>
+
+                    <div class="news-slide">
+                        <img src="/4.638126a5.png" alt="second-teaser">
+                        <div class="news-content">
+                            <p class="news-date">16.01.2020</p>
+                            <h2 class="news-title">Überschrift</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
+                                enim,
+                                ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
+                            </p>
+                            <a href="/secondsub.html">Mehr</a>
+                        </div>
+                    </div>
+
+                    <div class="news-slide">
+                        <img src="/1.669ef572.png" alt="second-teaser">
+                        <div class="news-content">
+                            <p class="news-date">04.03.2021</p>
+                            <h2 class="news-title">Überschrift</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias,
+                                enim,
+                                ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.
+                            </p>
+                            <a href="/secondsub.html">Mehr</a>
+                        </div>
+                    </div>
+                </div>
+                <a href=""></a>
+            </div>
+
+            
+            <h1>Studien</h1>
+            <div class="teaser-container">
+                <div class="teaser">
+                    <img src="/7.95250c32.png" alt="first-teaser">
+                    <div class="teaser-content">
+                        <h2 class="teaser-title">Auflagen der Zeitungen</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias, enim,
+                            ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.</p>
+                        <a href="/secondsub.html">Mehr</a>
+                    </div>
+                </div>
+                <div class="teaser">
+                    <img src="/8.96fc05e5.png" alt="second-teaser">
+                    <div class="teaser-content">
+                        <h2 class="teaser-title">Media-Beratung</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias, enim,
+                            ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.</p>
+                        <a href="/secondsub.html">Mehr</a>
+                    </div>
+                </div>
+                <div class="teaser">
+                    <img src="/9.6dd0fe77.png" alt="third-teaser">
+                    <div class="teaser-content">
+                        <h2 class="teaser-title">Gremien</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias, enim,
+                            ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.</p>
+                        <a href="/secondsub.html">Mehr</a>
+                    </div>
+                </div>
+            </div>
+            <div class="content-element-1">
+                <h2 class="image-title">Bildüberschrift</h2>
+                <img src="/6.a7ef9a91.jpg" alt="cover">
+                <h2>Überschrift</h2>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem repellendus iure cupiditate?</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas laudantium iusto, deleniti velit
+                    veritatis ea beatae inventore ab recusandae ullam ut error repellat officia ad. Ipsum fugiat quasi
+                    in aut? Reprehenderit minima labore ratione hic eos dolorum iste animi saepe sed natus deserunt
+                    dignissimos at accusamus error fugiat, nihil ex. Iste pariatur, dolorum et beatae, facilis numquam
+                    fugit veritatis hic cumque, quisquam quo ullam earum.</p>
+                <a href="/secondsub.html">Mehr</a>
+            </div>
+
+
+        </main>
+
+    </div>
+    <!--Wrapper closing-->
+
+    <div class="footer-container">
+        <div class="footer">
+            <ul>
+                <li><a href="/secondsub.html">Impressum</a></li>
+                <li><a href="/secondsub.html">Datenschutz</a></li>
+                <li><a href="/secondsub.html">Jobs</a></li>
+                <li><a href="/secondsub.html">Anmelden</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="/main.fb6bbcaf.js"></script>
+</body>
+
+</html>
